# groww_weekly_pulse_AIagent_MCP

./: .gitignore  README.md
.github/workflows/: weekly-pulse.yml
Docs/: ImplementationPlan.md  ProblemStatement.md  architecture.md  decisions.md
phase-0-mcp-setup/: .env.example  .gitignore  pyproject.toml  requirements.txt
phase-0-mcp-setup/config/: mcp_servers.example.json
phase-0-mcp-setup/scripts/: hello_mcp.py
phase-0-mcp-setup/src/groww_pulse/: config.py  logging_setup.py  run_summary.py
phase-0-mcp-setup/src/groww_pulse/mcp/: __init__.py  client.py  discovery.py
phase-0-mcp-setup/src/groww_pulse/phases/: __init__.py
phase-0-mcp-setup/src/groww_pulse/phases/phase_0_foundations/: __init__.py  hello_mcp.py
phase-0-mcp-setup/src/groww_pulse/phases/phase_1_ingestion/: __init__.py
phase-0-mcp-setup/src/groww_pulse/phases/phase_2_pii/: __init__.py
phase-0-mcp-setup/src/groww_pulse/phases/phase_3_summarization/: __init__.py
phase-0-mcp-setup/src/groww_pulse/phases/phase_4_delivery/: __init__.py
phase-0-mcp-setup/src/groww_pulse/phases/phase_5_orchestration/: __init__.py
phase-0-mcp-setup/tests/: __init__.py  test_config.py  test_phase0.py
phase-1-review-ingest/: .env.example  .gitignore  pyproject.toml  requirements.txt
phase-1-review-ingest/data/fixtures/: app_store_reviews.csv  play_store_reviews.csv
phase-1-review-ingest/scripts/: _apple_page_snippet.txt  _test_amp_api.py  _test_app_store_scraper.py  fetch_reviews.py  run_ingest.py  run_phase1.py
phase-1-review-ingest/src/groww_pulse/: __init__.py  config.py  logging_setup.py  models.py
phase-1-review-ingest/src/groww_pulse/phases/: __init__.py
phase-1-review-ingest/src/groww_pulse/phases/phase_1_ingestion/: __init__.py  dedupe.py  fetch_reviews.py  filters.py  id_utils.py  ingest.py  run_ingest.py  window.py
phase-1-review-ingest/src/groww_pulse/phases/phase_1_ingestion/parsers/: __init__.py  app_store.py  common.py  play_store.py
phase-1-review-ingest/tests/: test_ingestion.py
phase-2-pii-scrub/: .env.example  .gitignore  pyproject.toml
phase-2-pii-scrub/data/fixtures/: pii_reviews.json
phase-2-pii-scrub/scripts/: analyze_corpus.py  run_phase2.py
phase-2-pii-scrub/src/groww_pulse/: __init__.py  config.py  logging_setup.py  models.py
phase-2-pii-scrub/src/groww_pulse/phases/phase_2_pii/: __init__.py  gate.py  io.py  patterns.py  run_scrub.py  scrub.py
phase-2-pii-scrub/tests/: test_pii_scrub.py
phase-3-theme-summarize/: .env.example  pyproject.toml
phase-3-theme-summarize/data/fixtures/: scrubbed_sample.json
phase-3-theme-summarize/scripts/: run_phase3.py  serve_pulse.py
phase-3-theme-summarize/src/groww_pulse/: __init__.py  config.py  logging_setup.py  models.py
phase-3-theme-summarize/src/groww_pulse/phases/phase_3_summarization/: __init__.py  cluster.py  groq_summarize.py  io.py  pipeline.py  prompt.py  repair.py  run_summarize.py  tokens.py  validate.py
phase-3-theme-summarize/tests/: test_phase3.py
phase-4-mcp-deliver/: .env.example  .gitignore  README.md  pyproject.toml
phase-4-mcp-deliver/config/: mcp_server.google.json
phase-4-mcp-deliver/scripts/: run_phase4.py
phase-4-mcp-deliver/src/groww_pulse/: __init__.py  config.py  logging_setup.py  models.py
phase-4-mcp-deliver/src/groww_pulse/phases/phase_4_delivery/: __init__.py  io.py  mcp_http.py  pipeline.py  render.py  run_deliver.py  state.py  validate.py
phase-4-mcp-deliver/tests/: test_phase4.py
phase-5-orchestration/: README.md
phase-5-orchestration/ci/: server.py
phase-5-orchestration/scripts/: run_weekly_pulse.py
public/: index.html
(+7 files in other folders)
